--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
+    <link rel="shortcut icon" href="/Users/MTracy/Desktop/Projects/colmar/resources/images/ic-logo.ico"/>
   </head>
   <body>
 
