Finish header/navigation section.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,29 @@
     <title>Colmar Academy</title>
     <link rel="stylesheet" href="./resources/css/reset.css" type="text/css">
     <link rel="stylesheet" href="./resources/css/style.css" type="text/css">
-    <link rel="shortcut icon" href="/Users/MTracy/Desktop/Projects/colmar/resources/images/ic-logo.ico"/>
+    <link rel="shortcut icon" href="/Users/MTracy/Desktop/Projects/colmar/resources/images/ic-logo.ico">
   </head>
   <body>
 
+    <!-- Header Section -->
+    <header>
+      <nav class="container">
+        <div class="logo">
+          <a href="#"><img src="./resources/images/ic-logo.svg" alt="Small black company logo."></a>
+          <span>COLMAR ACADEMY</span>
+        </div>
+        <div class="menu">
+          <ul>
+            <li><a href="#">On Campus</a></li>
+            <li><a href="#">Online</a></li>
+            <li><a href="#">Companies</a></li>
+            <li class="right"><a href="#">Sign-in</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <!-- Top Container Section -->
+    
   </body>
 </html>
