Finish second container section.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
     </header>
 
     <!-- Top Container Section -->
-    
+    <section>
+      <div class="top container">
+        <img src="/Users/MTracy/Desktop/Projects/colmar/resources/images/banner.jpg" alt="Image of two young women working.">
+        <div class="info">
+          <h1>Learn something new everyday</h1>
+          <div>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+          <div class="button">Start Here</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Second Container Section -->
   </body>
 </html>
